media-server/readarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readarr
  namespace: media-server
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: readarr
